--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -31,9 +31,10 @@
 }
 
 .footer .footer-logo-img {
-  max-width: 180px;
+  max-width: 160px;
   height: auto;
   margin-bottom: 15px;
+  filter: brightness(0) invert(1);
 }
 
 .footer .footer-description {
